refactor(flexlb)!: simplify configuration, admission and request lifetimes
Use strict schema 3 with one maxInflightPerPrefillWorker setting, deterministic
Prefill selection, shared route ownership and unified Decode capacity accounting.
Separate request inactivity from decision visibility, and remove obsolete
thresholds, selection policies, wrappers and duplicate lifecycle state.

Restore queued Prefill reclamation for PRIORITY NON_BATCH delivery. Default
priority queues to all three victim stages; BATCH retains priority ordering
without evicting pending or committed Prefill batches.

Remove legacy behavior ENV parsing and Spring environment binding. Configure
gRPC executor sizes and worker cleanup cadence through FLEXLB_CONFIG, and local
role/group discovery through MODEL_SERVICE_CONFIG hosts or discovery_file.
Retain LOG_LEVEL and the existing HIPPO_ROLE identity used by HA coordination.

Validation: 951 common/cache/gRPC/sync tests; targeted API/mock tests; 134 Python
tests; internal VipServer build; application startup smoke; scoped formatting
and diff checks. Routing performance was measured before the ENV follow-up.

BREAKING CHANGE: legacy fields and ENV aliases are no longer supported.
Request inactivity timeout is required. maxInflightPerPrefillWorker defaults
to 2, counting batches in BATCH and requests in NON_BATCH/DIRECT.